<resources>
    <string name="app_name">Movies List</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="search_hint">Search</string>
    <string name="no_results">No results 😓</string>
    <string name="watchTrailer">watchTrailer</string>
    <string name="released">released:</string>
    <string name="noInternet">No Internet connection.</string>
    <string name="timeout">Connection Time out.</string>
    <string name="unknown">Unknown error.</string>
</resources>